XX/XX/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 2.6.1.1 'Harding Grim':
	- "pure" UDP setup optimized (when no DTLS configured);
	- SSL3 support.
	- TLS 1.1 and 1.2 support.
	- SSL2 "encapsulation" mode support.
	- --secret-ts-exp-time option deprecated; 
		In REST API timestamp, we are now using 
		the expiration time (Issue 31).
	- Classic STUN transaction ID fixed (Issue 48).
	TODO: - auxiliary endpoints.
	TODO: - self-load-balancing.
	
07/26/2013 Oleg Moskalenko <mom040267@gmail.com>,
			Vladimir Tsanev <tsachev@gmail.com>
Version 2.5.2.1 'Shivers':
	- log file placement changes.
	- Base64 encode/decode memory initialization fix.
	
07/23/2013 Oleg Moskalenko <mom040267@gmail.com>,
			Po-sheng Lin <personlin118@gmail.com>
Version 2.5.1.2 'Shivers':
	- getopt fix in client test programs.
	- cosmetic changes.
	- allow anonymous alternate-server functionality.

07/21/2013 Oleg Moskalenko <mom040267@gmail.com> 
Version 2.5.1.1 'Shivers':
	- Improved "split" network engine:
	two different threading models for TCP and UDP.
	- DTLS crash fixed.
	- Multithreading with Cygwin.
	
07/20/2013 Oleg Moskalenko <mom040267@gmail.com> 
Version 2.1.3.1 'Shivers':
	- DTLS improvements for DOS attacks
	- deeper optimization for DOS attack (mostly for Linux)
	
07/19/2013 Oleg Moskalenko <mom040267@gmail.com> 
Version 2.1.2.0 'Shivers':
	- deeper optimization for DOS attack (mostly for Linux)

07/18/2013 Oleg Moskalenko <mom040267@gmail.com>,
			Po-sheng Lin <personlin118@gmail.com> 
Version 2.1.1.1 'Shivers':
	- udp fixes.
	- Makefile cleaning.
	- Dependencies cleaning.
	- DOS attack client emulation.
	- DOS attack defense logic added to the server.

07/14/2013 Oleg Moskalenko <mom040267@gmail.com> 
Version 2.0.0.0 'Shivers':
	- new networking engine:
		- scalable UDP socket model. 
		- multithreaded TCP relay implemented.
		- race condition fixed in authentication of TCP sessions.
		- Cygwin "port" fixed. 

06/23/2013 Oleg Moskalenko <mom040267@gmail.com>,